--- a/templates/Reports_Edit.twig
+++ b/templates/Reports_Edit.twig
@@ -1,13 +1,15 @@
 {% requireAdmin %}
 
 {% extends "_layouts/cp" %}
-{% set title = report.id ? "Edit report"|t : "Create report"|t %}
+{% set title = report.id ? "Edit report"|t : "Create "~report.type~" report"|t %}
 
 {% import "_includes/forms" as forms %}
 
 {% set crumbs = [
     { label: "Reports"|t, url: url('reports') }
 ] %}
+
+{% set fullPageForm = true %}
 
 {% includeJsResource 'reports/js/codemirror/lib/codemirror.js' %}
 {% includeJsResource 'reports/js/codemirror/addon/mode/overlay.js' %}
@@ -18,8 +20,8 @@
 {% includeJsResource 'reports/js/Reports_Editor.js' %}
 
 {% block content %}
-    <form action="" method="post">
-        {{ getCsrfInput() }}
+    {# <form action="" method="post"> #}
+        {# {{ getCsrfInput() }} #}
         <input type="hidden" name="action" value="reports/save"/>
         {% if report.id %}
             <input type="hidden" name="id" value="{{ report.id }}"/>
@@ -37,17 +39,9 @@
             required: true
         }) }}
 
-        {{ forms.textField({
-            label: "Handle"|t,
-            instructions: "How you’ll refer to this entry type in the templates."|t,
-            id: 'handle',
-            class: 'code',
-            name: 'handle',
-            value: report.handle,
-            errors: report.getErrors('handle'),
-            required: true
-        }) }}
+        <input type="hidden" name="type" value="{{ report.type }}" />
 
+        {% if report.type == 'manual' %}
 
         {{ forms.textareaField({
             label: "Content"|t,
@@ -61,6 +55,12 @@
             required: true
         }) }}
 
-        <button class="submit btn">{{ "Save report"|t }}</button>
-    </form>
+        {% else %}
+
+        {{ settings|raw }}
+
+        {% endif %}
+
+        {# <button class="submit btn">{{ "Save report"|t }}</button> #}
+    {# </form> #}
 {% endblock %}
